<3 the-king-of-hearts <3

--- a/app/index.html
+++ b/app/index.html
@@ -7,27 +7,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1" />
 
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,700'>
-    <link rel="stylesheet" href="../node_modules/angular-material/angular-material.css"/>
-    <link rel="stylesheet" href="assets/tutorial_3.css"/>
-
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
+    <link rel="stylesheet" href="styles/angular-material.css"/>
+    <link rel="stylesheet" href="styles/main.css"/>
+    <link rel="stylesheet" href="app/main.css"/>
   </head>
 
-  <!--
-    ✓ Create Angular shell appf
-    ✓ Use `bower install angular-material`
-    ✓ Load the CSS (before our app.css),
-    ✓ Load the angular-material.js library and its dependent angular-aria.js and angular-animate.js libraries.
-    ✓ Then set the module dependency on 'ngMaterial'
-    ✓ Use wirefames to determine containers
-    ✓ Configure layouts
-    ✓ Lock open the sideNav, add shadow
-    ✓ Add (hard-coded) HTML content
-
-
-   Register Icons
-
-  -->
 
   <body ng-app="starterApp" layout="column">
 
