--- a/app/basic.html
+++ b/app/basic.html
@@ -1,57 +1,122 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
-
     <!-- Web Application Manifest -->
     <link rel="manifest" href="manifest.json">
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Web Starter Kit">
+    <meta name="application-name" content="STL.COOL">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
-
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
-
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#2F3BA2">
-
+    <meta name="msapplication-TileColor" content="#1B1B1B">
     <!-- Color the status bar on mobile devices -->
-    <meta name="theme-color" content="#2F3BA2">
-
+    <meta name="theme-color" content="#1B1B1B">
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
     <!--
     <link rel="canonical" href="http://www.example.com/">
     -->
+    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
+    <link rel="stylesheet" href="styles/angular-material.css"/>
+    <link rel="stylesheet" href="styles/main.css"/>
+    <link rel="stylesheet" href="styles/app.css"/>
   </head>
-  <body>
-    <!-- Add your site or app content here -->
+  <body ng-app="starterApp" layout="column" ng-controller="UserController as ul">
 
-    <!-- build:js scripts/main.min.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+    <md-toolbar layout="row">
+      <md-button class="menu" hide-gt-sm ng-click="ul.toggleList()" >
+        <md-icon md-svg-icon="menu" ></md-icon>
+      </md-button>
+      <h3>Angular Material - Starter App</h3>
+    </md-toolbar>
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-XXXXX-X', 'auto');
-      ga('send', 'pageview');
+    <div flex layout="row">
+
+        <md-sidenav md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')" ng-click="ul.toggleList()" class="md-whiteframe-4dp" >
+          <md-list>
+            <md-list-item ng-repeat="u in ul.users">
+                <md-button ng-click="ul.selectUser(u)" ng-class="{'selected' : u === ul.selected }">
+                  <md-icon md-svg-icon="{{u.avatar}}" class="avatar"></md-icon>
+                  {{u.name}}
+                </md-button>
+            </md-list-item>
+          </md-list>
+        </md-sidenav>
+
+        <md-content flex id="content">
+          <md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
+          <h2>{{ul.selected.name}}</h2>
+          <p>{{ul.selected.content}}</p>
+
+          <md-button class="share" md-no-ink ng-click="ul.makeContact(ul.selected)" >
+            <md-icon md-svg-icon="share"></md-icon>
+          </md-button>
+        </md-content>
+
+    </div>
+    <!--
+    <script src="../node_modules/angular/angular.js"></script>
+    <script src="../node_modules/angular-animate/angular-animate.js"></script>
+    <script src="../node_modules/angular-aria/angular-aria.js"></script>
+    <script type="text/javascript" src="../node_modules/angular-material/angular-material.js"></script>
+     -->
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.1/angular-material.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.14/angular-messages.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <script src="./src/Users.js"></script>
+    <script src="./src/UserController.js"></script>
+    <script src="./src/UserService.js"></script>
+    <script type="text/javascript">
+
+      angular
+        .module('starterApp', ['ngMaterial', 'users'])
+        .config(function($mdThemingProvider, $mdIconProvider){
+
+          $mdThemingProvider.theme('default')
+              .dark()
+              .primaryPalette('blue')
+              .accentPalette('red');
+
+          $mdIconProvider
+              .defaultIconSet("./assets/svg/avatars.svg", 128)
+              .icon("menu"       , "./assets/svg/menu.svg"        , 24)
+              .icon("share"      , "./assets/svg/share.svg"       , 24)
+              .icon("google_plus", "./assets/svg/google_plus.svg" , 512)
+              .icon("hangouts"   , "./assets/svg/hangouts.svg"    , 512)
+              .icon("twitter"    , "./assets/svg/twitter.svg"     , 512)
+              .icon("phone"      , "./assets/svg/phone.svg"       , 512);
+
+        });
+
     </script>
-    <!-- Built with love using Web Starter Kit -->
+
+    <script>
+      // Initialize the Firebase SDK
+      var config = {
+        apiKey: "AIzaSyAS7oyD6eEg_TLvMVlwiN1WBfHKqoSoyZE",
+        authDomain: "hot-shorts-4e79e.firebaseapp.com",
+        databaseURL: "https://hot-shorts-4e79e.firebaseio.com",
+        storageBucket: "hot-shorts-4e79e.appspot.com",
+        messagingSenderId: "67914260758"
+      };
+      firebase.initializeApp(config);
+    </script>
   </body>
 </html>
